--- a/index.html
+++ b/index.html
@@ -377,85 +377,85 @@
         <div class="swiper-container3 myswiper3">
             <div class="swiper-wrapper">
                 <div class="swiper-slide swiper-slide-active">
-                    <a href="https://www.amazon.com/gp/customer-preferences/select-language/ref=aistrust2?pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unkhttps://www.amazon.com/gp/customer-preferences/select-language/ref=aistrust2?pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
+                    <a href="https://www.amazon.com/Neutrogena-Makeup-Removing-Wipes-Count/dp/B00U2VQZDS/?_encoding=UTF8&pd_rd_w=W81Z0&pf_rd_p=b6363b44-58dd-4354-979f-1446a1c45f7a&pf_rd_r=BAQKPE0JFD17HWMG8GCM&pd_rd_r=40da2816-bc99-4f66-93cf-05c0dd93252a&pd_rd_wg=b6Tia&ref_=pd_gw_unk">
                         <img src="./images/slides/icon_slide_7.JPG" id="icon_slide_07">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
-                    <a href="https://www.amazon.com/gp/customer-preferences/select-currency/ref=aistrust3?pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
+                    <a href="https://www.amazon.com/CeraVe-Moisturizing-Cream-Daily-Moisturizer/dp/B00TTD9BRC/?_encoding=UTF8&pd_rd_w=W81Z0&pf_rd_p=b6363b44-58dd-4354-979f-1446a1c45f7a&pf_rd_r=BAQKPE0JFD17HWMG8GCM&pd_rd_r=40da2816-bc99-4f66-93cf-05c0dd93252a&pd_rd_wg=b6Tia&ref_=pd_gw_unk">
                         <img src="./images/slides/icon_slide_8.JPG" id="icon_slide_08">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
-                    <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=201132710&ref=aistrust4&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
+                    <a href="https://www.amazon.com/Revlon-One-Step-Dryer-Volumizer-Brush/dp/B01LSUQSB0/?_encoding=UTF8&pd_rd_w=W81Z0&pf_rd_p=b6363b44-58dd-4354-979f-1446a1c45f7a&pf_rd_r=BAQKPE0JFD17HWMG8GCM&pd_rd_r=40da2816-bc99-4f66-93cf-05c0dd93252a&pd_rd_wg=b6Tia&ref_=pd_gw_unk">
                         <img src="./images/slides/icon_slide_9.JPG" id="icon_slide_09">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
-                    <a href="https://www.amazon.com/gp/help/customer/display.html/ref=aistrust5?ie=UTF8&nodeId=201910710&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
+                    <a href="https://www.amazon.com/Crest-White-Toothpaste-Radiant-Mint/dp/B01KZOTRG8/?_encoding=UTF8&pd_rd_w=W81Z0&pf_rd_p=b6363b44-58dd-4354-979f-1446a1c45f7a&pf_rd_r=BAQKPE0JFD17HWMG8GCM&pd_rd_r=40da2816-bc99-4f66-93cf-05c0dd93252a&pd_rd_wg=b6Tia&ref_=pd_gw_unk">
                         <img src="./images/slides/icon_slide_10.JPG" id="icon_slide_10">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
-                    <a href="https://www.amazon.com/ap/signin?_encoding=UTF8&accountStatusPolicy=P1&openid.assoc_handle=usflex&openid.claimed_id=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.identity=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.mode=checkid_setup&openid.ns=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0&openid.ns.pape=http%3A%2F%2Fspecs.openid.net%2Fextensions%2Fpape%2F1.0&openid.pape.max_auth_age=0&openid.return_to=https%3A%2F%2Fwww.amazon.com%2Fgp%2Fcss%2Forder-history%3Fie%3DUTF8%26pd_rd_r%3Daa1d3718-d9fe-4813-bce9-44ce68ec44b7%26pd_rd_w%3DnVaXH%26pd_rd_wg%3D5NxkY%26ref_%3Dpd_gw_unk&pageId=webcs-yourorder&showRmrMe=1">
+                    <a href="https://www.amazon.com/Crest-Professional-Whitestrips-Whitening-Treatments/dp/B00AHAWWO0/?_encoding=UTF8&pd_rd_w=W81Z0&pf_rd_p=b6363b44-58dd-4354-979f-1446a1c45f7a&pf_rd_r=BAQKPE0JFD17HWMG8GCM&pd_rd_r=40da2816-bc99-4f66-93cf-05c0dd93252a&pd_rd_wg=b6Tia&ref_=pd_gw_unk">
                         <img src="./images/slides/icon_slide_11.JPG" id="icon_slide_11">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
-                    <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref=aistrust7&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
+                    <a href="https://www.amazon.com/Dove-Body-Wash-Pump-Moisture/dp/B00MEDOY2G/?_encoding=UTF8&pd_rd_w=W81Z0&pf_rd_p=b6363b44-58dd-4354-979f-1446a1c45f7a&pf_rd_r=BAQKPE0JFD17HWMG8GCM&pd_rd_r=40da2816-bc99-4f66-93cf-05c0dd93252a&pd_rd_wg=b6Tia&ref_=pd_gw_unk">
                         <img src="./images/slides/icon_slide_12.JPG" id="icon_slide_12">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
-                    <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref=aistrust7&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
+                    <a href="https://www.amazon.com/Sensodyne-Pronamel-Whitening-Strengthening-Toothpaste/dp/B0762LYFKP/?_encoding=UTF8&pd_rd_w=W81Z0&pf_rd_p=b6363b44-58dd-4354-979f-1446a1c45f7a&pf_rd_r=BAQKPE0JFD17HWMG8GCM&pd_rd_r=40da2816-bc99-4f66-93cf-05c0dd93252a&pd_rd_wg=b6Tia&ref_=pd_gw_unk">
                         <img src="./images/slides/icon_slide_13.JPG" id="icon_slide_13">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
-                    <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref=aistrust7&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
+                    <a href="https://www.amazon.com/Philips-Sonicare-replacement-toothbrush-HX9023/dp/B078BF27BF/?_encoding=UTF8&pd_rd_w=7c38j&pf_rd_p=b6363b44-58dd-4354-979f-1446a1c45f7a&pf_rd_r=FRPG4W8417SEV5BCCVTD&pd_rd_r=5baa4f5d-f3d9-4f2a-a9d9-7cc811ada8fd&pd_rd_wg=8kpYp&ref_=pd_gw_unk">
                         <img src="./images/slides/icon_slide_14.JPG" id="icon_slide_14">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
-                    <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref=aistrust7&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
+                    <a href="https://www.amazon.com/TheraBreath-Formulated-Certified-Two-Pack/dp/B001ET76AI/?_encoding=UTF8&pd_rd_w=7c38j&pf_rd_p=b6363b44-58dd-4354-979f-1446a1c45f7a&pf_rd_r=FRPG4W8417SEV5BCCVTD&pd_rd_r=5baa4f5d-f3d9-4f2a-a9d9-7cc811ada8fd&pd_rd_wg=8kpYp&ref_=pd_gw_unk">
                         <img src="./images/slides/icon_slide_15.JPG" id="icon_slide_15">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
-                    <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref=aistrust7&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
+                    <a href="https://www.amazon.com/Toms-Maine-Fluoride-Free-Antiplaque-Toothpaste/dp/B00JUJ1E0W/?_encoding=UTF8&pd_rd_w=7c38j&pf_rd_p=b6363b44-58dd-4354-979f-1446a1c45f7a&pf_rd_r=FRPG4W8417SEV5BCCVTD&pd_rd_r=5baa4f5d-f3d9-4f2a-a9d9-7cc811ada8fd&pd_rd_wg=8kpYp&ref_=pd_gw_unk">
                         <img src="./images/slides/icon_slide_16.JPG" id="icon_slide_16">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
-                    <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref=aistrust7&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
+                    <a href="https://www.amazon.com/CeraVe-Moisturizing-Lotion-Hyaluronic-Fragrance/dp/B000YJ2SLG/?_encoding=UTF8&pd_rd_w=7c38j&pf_rd_p=b6363b44-58dd-4354-979f-1446a1c45f7a&pf_rd_r=FRPG4W8417SEV5BCCVTD&pd_rd_r=5baa4f5d-f3d9-4f2a-a9d9-7cc811ada8fd&pd_rd_wg=8kpYp&ref_=pd_gw_unk">
                         <img src="./images/slides/icon_slide_17.JPG" id="icon_slide_17">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
-                    <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref=aistrust7&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
+                    <a href="https://www.amazon.com/CeraVe-Moisturizing-Lotion-Hyaluronic-Fragrance/dp/B000YJ2SLG/?_encoding=UTF8&pd_rd_w=7c38j&pf_rd_p=b6363b44-58dd-4354-979f-1446a1c45f7a&pf_rd_r=FRPG4W8417SEV5BCCVTD&pd_rd_r=5baa4f5d-f3d9-4f2a-a9d9-7cc811ada8fd&pd_rd_wg=8kpYp&ref_=pd_gw_unk">
                         <img src="./images/slides/icon_slide_18.JPG" id="icon_slide_18">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
-                    <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref=aistrust7&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
+                    <a href="https://www.amazon.com/Gillette-Fusion5-Razor-Blades-Refills/dp/B004B8F8MM/?_encoding=UTF8&pd_rd_w=WSIzA&pf_rd_p=b6363b44-58dd-4354-979f-1446a1c45f7a&pf_rd_r=N2KY8MP2HJNDJFCSRF25&pd_rd_r=bf55ffb3-d532-4cfd-8e8e-eda19bae2997&pd_rd_wg=BD1AY&ref_=pd_gw_unk">
                         <img src="./images/slides/icon_slide_19.JPG" id="icon_slide_19">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
-                    <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref=aistrust7&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
+                    <a href="https://www.amazon.com/Glide-Oral-B-Pro-Health-Clean-Floss/dp/B01KZOTTSO/?_encoding=UTF8&pd_rd_w=WSIzA&pf_rd_p=b6363b44-58dd-4354-979f-1446a1c45f7a&pf_rd_r=N2KY8MP2HJNDJFCSRF25&pd_rd_r=bf55ffb3-d532-4cfd-8e8e-eda19bae2997&pd_rd_wg=BD1AY&ref_=pd_gw_unk">
                         <img src="./images/slides/icon_slide_20.JPG" id="icon_slide_20">
                     </a>
                 </div>
