--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/main.css" media="screen and (min-width : 960px)">
+    <link rel="stylesheet" href="./css/main.css">
+    <!-- media="screen and (min-width : 960px)" -->
     <!-- <link rel="stylesheet" href="./css/tablet.css" media="screen and (min-width : 768px) and (max-width: 959px)">
     <link rel="stylesheet" href="./css/mobile.css" media="screen and (max-width : 767px)"> -->
     <script defer src="./js/main.js"></script>
