--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
                 <div class="swiper-slide"><img src="./images/slides/3.jpg"></div>
                 <div class="swiper-slide"><img src="./images/slides/4.jpg"></div>
                 <div class="swiper-slide"><img src="./images/slides/5.jpg"></div>
+                <div class="swiper-slide"><img src="./images/slides/6.jpg"></div>
             </div>
             <div class="swiper-button-next swiper-button-black" id="button_next_second"></div>
             <div class="swiper-button-prev swiper-button-black" id="button_prev_second"></div>
