자잘한 수정

--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
             </a>
         </div>
 
-        <div id="fs01-">
+        <div id="fs01-02">
             <br><b>Make Money with Us</b><br><br>
 
             <a href="https://sell.amazon.com/sell.html">
